# meeting-atlas

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json  test.html
docs/: ARCHITECTURE.md  ENVIRONMENT.md  IMPLEMENTATION_PLAN.md  OPERATIONS.md  README.md  SECURITY.md  design-system.md
prisma/: AGENTS.md  schema.prisma
processing-service/: AGENTS.md  pyproject.toml
processing-service/scripts/: benchmark-whisper.sh  build-whisper-backends.sh  setup-pyannote-offline.sh  setup-vulkan-user.sh  setup-wespeaker-offline.sh  setup-whisper-models.sh
processing-service/src/meeting_processor/: __init__.py  app.py  diarization.py  diarization_runner.py  files.py  llm.py  security.py  settings.py  subprocesses.py  whisper.py
processing-service/src/meeting_transcriber_processing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
processing-service/systemd/: meeting-processor.service  meeting-processor.user.service
processing-service/tests/: test_diarization.py  test_diarization_runner.py  test_security.py  test_subprocesses.py  test_whisper.py
public/: sw.js
scripts/: AGENTS.md  create-owner.ts  generate-fixture.ps1  reset-owner-password.ts  run-retention.ts  test-e2e.ts  test-integration.ts
src/: AGENTS.md  instrumentation.ts  proxy.test.ts  proxy.ts  worker.ts
src/app/: app-shell.tsx  brand-glyph.tsx  confirmation-dialog.tsx  error.tsx  form-submit-button.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  meeting-delete-button.tsx  meeting-library.tsx  (+2 more)
(+99 files in other folders)
